--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>AVE</title>
+	<title>Avenue</title>
 	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="./main.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="./Icons/999daab0103465addcf5adfc2d812e1c.jpg" type="image/x-icon">
 </head>
 <body>
 	<header class="container">
@@ -151,10 +152,46 @@
 			<button class="main-button">shop men’s collection</button>
 		</div>
 	</main>
-	<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+	<div class="container"><div class="line"></div></div>
+	<div class="category-menu-box container">
+		<ul class="category-menu-list">
+			<li class="category-menu-items">popular</li>
+			<li class="category-menu-items">new arrivals</li>
+			<li class="category-menu-items">best sellers</li>
+			<li class="category-menu-items">special offers</li>
+			<li class="category-menu-items">coming soon</li>
+		</ul>
+	</div>
+	<div class="d-flex container">
+		<div class="good-card">
+			<div class="good-image good-1">
+				<p class="good-price">99.9 $</p>
+			</div>
+			<div class="good-card-desc">
+				<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+				<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+				<div class="good-card-icons">
+					<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
+					<img src="">
+					<img src="">
+				</div>
+			</div>
+		</div>
+		<div class="good-card">
+			<div class="good-image good-2">
+				<p class="good-price">99.9 $</p>
+			</div>
+			<div class="good-card-desc">
+				<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+				<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+				<div class="good-card-icons">
+					<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
+					<img src="">
+					<img src="">
+				</div>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
