--- a/index.html
+++ b/index.html
@@ -185,13 +185,14 @@
 				<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 				<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
 				<div class="good-card-icons">
-					<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
+					<img src="./Icons/@1X.png">
 					<img src="">
 					<img src="">
 				</div>
 			</div>
 		</div>
 	</div>
+	<div style="height: 200px;"></div>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
