goods-card fixed

--- a/index.html
+++ b/index.html
@@ -162,33 +162,103 @@
 			<li class="category-menu-items">coming soon</li>
 		</ul>
 	</div>
-	<div class="d-flex container">
-		<div class="good-card">
-			<div class="good-image good-1">
-				<p class="good-price">99.9 $</p>
+	<div class="main-goods container">
+		<div class="goods-wrapper">
+			<div class="good-card">
+				<div class="good-image good-1">
+					<p class="good-price">99.9 $</p>
+				</div>
+				<div class="good-card-desc">
+					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+					<div class="good-card-icons">
+						<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
+						<img src="">
+						<img src="">
+					</div>
+				</div>
 			</div>
-			<div class="good-card-desc">
-				<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
-				<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-				<div class="good-card-icons">
-					<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
-					<img src="">
-					<img src="">
+			<div class="good-card">
+				<div class="good-image good-2">
+					<p class="good-price">99.9 $</p>
+				</div>
+				<div class="good-card-desc">
+					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+					<div class="good-card-icons">
+						<img src="./Icons/@1X.png">
+						<img src="">
+						<img src="">
+					</div>
+				</div>
+			</div>
+			<div class="good-card-big">
+				<div class="good-image good-3">
+					<p class="good-price">99.9 $</p>
+				</div>
+				<div class="good-card-desc">
+					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+					<div class="good-card-icons">
+						<img src="./Icons/@1X.png">
+						<img src="">
+						<img src="">
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="good-card">
-			<div class="good-image good-2">
-				<p class="good-price">99.9 $</p>
-			</div>
-			<div class="good-card-desc">
-				<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
-				<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-				<div class="good-card-icons">
-					<img src="./Icons/@1X.png">
-					<img src="">
-					<img src="">
+		<div class="goods-wrapper">
+			<div class="good-card-big">
+				<div class="good-image good-4">
+					<p class="good-price">99.9 $</p>
 				</div>
+				<div class="good-card-desc">
+					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+					<div class="good-card-icons">
+						<img src="./Icons/@1X.png">
+						<img src="">
+						<img src="">
+					</div>
+				</div>
+			</div>
+			<div class="good-card">
+				<div class="good-image good-5">
+					<p class="good-price">99.9 $</p>
+				</div>
+				<div class="good-card-desc">
+					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+					<div class="good-card-icons">
+						<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
+						<img src="">
+						<img src="">
+					</div>
+				</div>
+			</div>
+			<div class="good-card">
+				<div class="good-image good-6">
+					<p class="good-price">99.9 $</p>
+				</div>
+				<div class="good-card-desc">
+					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
+					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
+					<div class="good-card-icons">
+						<img src="./Icons/@1X.png">
+						<img src="">
+						<img src="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="lookbook-wrapper">
+		<div class="look-book-card">
+			<div class="lookbook-img man"></div>
+			<div>
+				<h3 class="lookbook-tittle">men’s lookbook</h3>
+				<p>Lorem ipsum dolor sit amet eras facilisisconsectetur adipiscing elit lor, integer lorem consecteur dignissim laciniqui.Elementum metus facilisis ut phasellu.</p>
+				<button class="lookbook-button"></button>
 			</div>
 		</div>
 	</div>
