lookbook blocks added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Avenue</title>
-	<link rel="stylesheet" href="./style.css">
-	<link rel="stylesheet" href="./main.css">
+	<link rel="stylesheet" href="./styles/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" href="./Icons/999daab0103465addcf5adfc2d812e1c.jpg" type="image/x-icon">
 </head>
@@ -255,10 +254,26 @@
 	<div class="lookbook-wrapper">
 		<div class="look-book-card">
 			<div class="lookbook-img man"></div>
-			<div>
-				<h3 class="lookbook-tittle">men’s lookbook</h3>
+			<div class="lookbook-info">
+				<h3 class="lookbook-tittle">Men's<br> <span class="light-text">lookbook</span></h3>
 				<p>Lorem ipsum dolor sit amet eras facilisisconsectetur adipiscing elit lor, integer lorem consecteur dignissim laciniqui.Elementum metus facilisis ut phasellu.</p>
-				<button class="lookbook-button"></button>
+				<button class="lookbook-button">view now</button>
+			</div>
+		</div>
+		<div class="look-book-card">
+			<div class="lookbook-img women"></div>
+			<div class="lookbook-info">
+				<h3 class="lookbook-tittle">Women's<br> <span class="light-text">lookbook</span></h3>
+				<p>Lorem ipsum dolor sit amet eras facilisisconsectetur adipiscing elit lor, integer lorem consecteur dignissim laciniqui.Elementum metus facilisis ut phasellu.</p>
+				<button class="lookbook-button">view now</button>
+			</div>
+		</div>
+		<div class="look-book-card">
+			<div class="lookbook-img your"></div>
+			<div class="lookbook-info">
+				<h3 class="lookbook-tittle">Your<br> <span class="light-text">lookbook</span></h3>
+				<p>Lorem ipsum dolor sit amet eras facilisisconsectetur adipiscing elit lor, integer lorem consecteur dignissim laciniqui.Elementum metus facilisis ut phasellu.</p>
+				<button class="lookbook-button">view now</button>
 			</div>
 		</div>
 	</div>
