--- a/index.html
+++ b/index.html
@@ -277,7 +277,76 @@
 			</div>
 		</div>
 	</div>
-	<div style="height: 200px;"></div>
+	<footer>
+		<div class="container-300">
+			<div class="d-flex j-c-sb mb-50">
+				<ul class="footer-menu-block">
+					<p class="footer-menu-block-tittle"><strong>Information</strong></p>
+					<li class="footer-menu-item">The brand</li>
+					<li class="footer-menu-item">Local stores</li>
+					<li class="footer-menu-item">Customer service</li>
+					<li class="footer-menu-item"> Privacy & cookies</li>
+					<li class="footer-menu-item">Site map</li>
+				</ul>
+				<ul class="footer-menu-block">
+					<p class="footer-menu-block-tittle"><strong>Why buy from us</strong></p>
+					<li class="footer-menu-item">Shipping & returns</li>
+					<li class="footer-menu-item">Secure shopping</li>
+					<li class="footer-menu-item">Testimonials</li>
+					<li class="footer-menu-item"> Award winning</li>
+					<li class="footer-menu-item">Ethical trading</li>
+				</ul>
+				<ul class="footer-menu-block">
+					<p class="footer-menu-block-tittle"><strong>Your account</strong></p>
+					<li class="footer-menu-item">Sign in</li>
+					<li class="footer-menu-item">Register</li>
+					<li class="footer-menu-item">View cart</li>
+					<li class="footer-menu-item">View your lookbook</li>
+					<li class="footer-menu-item">Track an order</li>
+					<li class="footer-menu-item">Update information</li>
+				</ul>
+				<ul class="footer-menu-block">
+					<p class="footer-menu-block-tittle"><strong>Lookbook</strong></p>
+					<li class="footer-menu-item">Latest posts</li>
+					<li class="footer-menu-item">Men’s lookbook</li>
+					<li class="footer-menu-item">Women’s lookbook</li>
+					<li class="footer-menu-item">Lookbooks RSS feed</li>
+					<li class="footer-menu-item">View your lookbook</li>
+					<li class="footer-menu-item">Delete your lookbook</li>
+				</ul>
+				<ul class="footer-menu-block">
+					<p class="footer-menu-block-tittle"><strong>contact details</strong></p>
+					<li class="footer-menu-item">Latest posts</li>
+					<li class="footer-menu-item">Men’s lookbook</li>
+					<li class="footer-menu-item">Women’s lookbook</li>
+					<li class="footer-menu-item">Lookbooks RSS feed</li>
+					<li class="footer-menu-item">View your lookbook</li>
+					<li class="footer-menu-item">Delete your lookbook</li>
+				</ul>
+			</div>
+			<div class="d-flex j-c-sb">
+				<div class="footer-banner">					
+					<p><strong>award winner</strong></p>
+					<p>fashion awards 2016</p>
+				</div>
+				<div class="footer-socials">
+					<div class="d-flex j-c-sb social-block">
+						<a href="https://www.facebook.com/"><img class="social-icon" src="./Icons/facebook.svg" alt=""></a>
+						<a href="https://twitter.com/"><img class="social-icon" src="./Icons/twitter.svg" alt=""></a>
+						<a href="https://www.instagram.com/"><img class="social-icon" src="./Icons/instagram.svg" alt=""></a>
+						<a href="https://www.pinterest.com/"><img class="social-icon" src="./Icons/pinterest.svg" alt=""></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer-authors">
+			<p>© 2016 Avenue Fashion™</p>
+			<div class="d-flex">
+				<p style="margin-right: 20px;">Design by RobbyDesigns.com</p>
+				<p>Dev by RusikIndustry.com</p>
+			</div>
+		</div>
+	</footer>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
