--- a/index.html
+++ b/index.html
@@ -170,10 +170,16 @@
 				<div class="good-card-desc">
 					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-					<div class="good-card-icons">
-						<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
-						<img src="">
-						<img src="">
+					<div class="d-flex j-c-c">
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/opposite.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/heart.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/supermarket.svg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -184,10 +190,16 @@
 				<div class="good-card-desc">
 					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-					<div class="good-card-icons">
-						<img src="./Icons/@1X.png">
-						<img src="">
-						<img src="">
+					<div class="d-flex j-c-c">
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/opposite.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/heart.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/supermarket.svg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -198,10 +210,16 @@
 				<div class="good-card-desc">
 					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-					<div class="good-card-icons">
-						<img src="./Icons/@1X.png">
-						<img src="">
-						<img src="">
+					<div class="d-flex j-c-c">
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/opposite.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/heart.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/supermarket.svg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -214,10 +232,16 @@
 				<div class="good-card-desc">
 					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-					<div class="good-card-icons">
-						<img src="./Icons/@1X.png">
-						<img src="">
-						<img src="">
+					<div class="d-flex j-c-c">
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/opposite.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/heart.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/supermarket.svg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -228,10 +252,16 @@
 				<div class="good-card-desc">
 					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-					<div class="good-card-icons">
-						<img style="background-color: #000; border-radius: 100%; width: 20px; padding: 5px;" src="./Icons/@1X.png">
-						<img src="">
-						<img src="">
+					<div class="d-flex j-c-c">
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/opposite.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/heart.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/supermarket.svg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -242,10 +272,16 @@
 				<div class="good-card-desc">
 					<p class="good-card-name">Womens burnt orange casual tee  £29.95</p>
 					<p>Classic casual t-shirt for women on the move. 100% cotton. A hard-wearing sports t-shirt with microvent technology.</p>
-					<div class="good-card-icons">
-						<img src="./Icons/@1X.png">
-						<img src="">
-						<img src="">
+					<div class="d-flex j-c-c">
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/opposite.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/heart.svg">
+						</div>
+						<div class="icon-box">
+							<img class="good-card-icon" src="./Icons/supermarket.svg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -278,8 +314,8 @@
 		</div>
 	</div>
 	<footer>
-		<div class="container-300">
-			<div class="d-flex j-c-sb mb-50">
+		<div class="footer-container">
+			<div class="footer-menu-wrapper">
 				<ul class="footer-menu-block">
 					<p class="footer-menu-block-tittle"><strong>Information</strong></p>
 					<li class="footer-menu-item">The brand</li>
@@ -339,7 +375,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer-authors">
+		<div class="footer-authors footer-container">
 			<p>© 2016 Avenue Fashion™</p>
 			<div class="d-flex">
 				<p style="margin-right: 20px;">Design by RobbyDesigns.com</p>
